pod-security/require-readonly-rootfs/.chainsaw-test/invalid-init-writable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-init-writable
spec:
  initContainers:
    - name: init
      image: nginx:1.25
  containers:
    - name: app
      image: nginx:1.25
      securityContext:
        readOnlyRootFilesystem: true
