pod-security/require-readonly-rootfs/.chainsaw-test/invalid-writable-rootfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-writable-rootfs
spec:
  containers:
    - name: app
      image: nginx:1.25
