pod-security/require-readonly-rootfs/.chainsaw-test/valid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod
spec:
  containers:
    - name: app
      image: nginx:1.25
      securityContext:
        readOnlyRootFilesystem: true
